fix: turbo-page overflow-x

--- a/css/turbo_css.scss
+++ b/css/turbo_css.scss
@@ -406,8 +406,8 @@ footer .footer-middle .footer-middle-agreement-modal a {
 
 .equipment-container {
   margin-top: 30px;
-  margin-right: -30px;
-  margin-left: -30px;
+  margin-right: -20px;
+  margin-left: -20px;
 
   & > .swiper-wrapper {
     .swiper-slide {
@@ -584,7 +584,7 @@ footer .footer-middle .footer-middle-agreement-modal a {
 
 .sets {
   position: relative;
-  margin: 30px -30px;
+  margin: 30px -20px;
   max-width: 1170px;
 
   &__title {
